style cart, add estimate-shipping

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -80,7 +80,11 @@
           "/ajax-cart.js",
           "/customer.js",
           "/main-search.js",
-          "/pickup-availability.js"
+          "/pickup-availability.js",
+          "/main-compare.js",
+          "/main-collection.js",
+          "/main-wishlist.js",
+          "/show-more.js"
         ],
         "exceptions": []
       }
@@ -946,7 +950,20 @@
         "file": "accordion-element.js",
         "config": {
           "autoCompile": true,
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\accordion-element.js"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\accordion-element.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
+            "minify-js": {
+              "options": {
+                "toplevel": true
+              }
+            }
+          }
         }
       },
       {
@@ -967,33 +984,80 @@
         "file": "cart-drawer.js",
         "config": {
           "autoCompile": true,
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\cart-drawer.js",
           "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
             "minify-js": {
-              "enable": false
+              "options": {
+                "toplevel": true
+              }
             }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\cart-drawer.js"
+          }
         }
       },
       {
         "file": "component-tabs.js",
         "config": {
           "autoCompile": true,
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-tabs.js"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-tabs.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
+            "minify-js": {
+              "options": {
+                "toplevel": true
+              }
+            }
+          }
         }
       },
       {
         "file": "cookie-notice.js",
         "config": {
+          "autoCompile": true,
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\cookie-notice.js",
-          "autoCompile": true
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
+            "minify-js": {
+              "options": {
+                "toplevel": true
+              }
+            }
+          }
         }
       },
       {
         "file": "customer.js",
         "config": {
+          "autoCompile": true,
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\customer.js",
-          "autoCompile": true
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
+            "minify-js": {
+              "options": {
+                "toplevel": true
+              }
+            }
+          }
         }
       },
       {
@@ -1006,37 +1070,61 @@
       {
         "file": "details-open.js",
         "config": {
-          "tasks": {
-            "minify-js": {
-              "enable": false
-            }
-          },
+          "autoCompile": true,
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\details-open.js",
-          "autoCompile": true
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
+            "minify-js": {
+              "options": {
+                "toplevel": true
+              }
+            }
+          }
         }
       },
       {
         "file": "facets.js",
         "config": {
-          "tasks": {
-            "minify-js": {
-              "enable": false
-            }
-          },
+          "autoCompile": true,
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\facets.js",
-          "autoCompile": true
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
+            "minify-js": {
+              "options": {
+                "toplevel": true
+              }
+            }
+          }
         }
       },
       {
         "file": "global.js",
         "config": {
           "autoCompile": true,
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\global.js",
           "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
             "minify-js": {
-              "enable": false
+              "options": {
+                "toplevel": true
+              }
             }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\global.js"
+          }
         }
       },
       {
@@ -1055,38 +1143,77 @@
         "file": "header-search.js",
         "config": {
           "autoCompile": true,
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\header-search.js",
           "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
             "minify-js": {
-              "enable": false
+              "options": {
+                "toplevel": true
+              }
             }
-          },
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\header-search.js"
+          }
         }
       },
       {
         "file": "helper-functions.js",
         "config": {
           "autoCompile": true,
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\helper-functions.js"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\helper-functions.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "options": {
+                "devMode": false
+              }
+            }
+          }
         }
       },
       {
         "file": "main-blog.js",
         "config": {
+          "autoCompile": true,
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-blog.js",
-          "autoCompile": true
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
+            "minify-js": {
+              "options": {
+                "toplevel": true
+              }
+            }
+          }
         }
       },
       {
         "file": "main-collection.js",
         "config": {
-          "tasks": {
-            "minify-js": {
-              "enable": false
-            }
-          },
+          "autoCompile": true,
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-collection.js",
-          "autoCompile": true
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
+            "minify-js": {
+              "options": {
+                "toplevel": true
+              }
+            }
+          }
         }
       },
       {
@@ -1095,8 +1222,16 @@
           "autoCompile": true,
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-compare.js",
           "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
             "minify-js": {
-              "enable": false
+              "options": {
+                "toplevel": true
+              }
             }
           }
         }
@@ -1104,44 +1239,81 @@
       {
         "file": "main-search.js",
         "config": {
-          "tasks": {
-            "minify-js": {
-              "enable": false
-            }
-          },
+          "autoCompile": true,
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-search.js",
-          "autoCompile": true
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
+            "minify-js": {
+              "options": {
+                "toplevel": true
+              }
+            }
+          }
         }
       },
       {
         "file": "main-wishlist.js",
         "config": {
-          "tasks": {
-            "minify-js": {
-              "enable": false
-            }
-          },
+          "autoCompile": true,
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\main-wishlist.js",
-          "autoCompile": true
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
+            "minify-js": {
+              "options": {
+                "toplevel": true
+              }
+            }
+          }
         }
       },
       {
         "file": "pickup-availability.js",
         "config": {
-          "tasks": {
-            "minify-js": {
-              "enable": false
-            }
-          },
           "autoCompile": true,
-          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\pickup-availability.js"
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\pickup-availability.js",
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
+            "minify-js": {
+              "options": {
+                "toplevel": true
+              }
+            }
+          }
         }
       },
       {
         "file": "scroll-up.js",
         "config": {
+          "autoCompile": true,
           "customOutput": "C:\\GitShopify\\HomeShopifyStore\\shopify-blank-theme\\assets\\scroll-up.js",
-          "autoCompile": true
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
+            "minify-js": {
+              "options": {
+                "toplevel": true
+              }
+            }
+          }
         }
       },
       {
@@ -1150,8 +1322,16 @@
           "autoCompile": true,
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-header.js",
           "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
             "minify-js": {
-              "enable": false
+              "options": {
+                "toplevel": true
+              }
             }
           }
         }
@@ -1159,13 +1339,21 @@
       {
         "file": "show-more.js",
         "config": {
-          "tasks": {
-            "minify-js": {
-              "enable": false
-            }
-          },
+          "autoCompile": true,
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\show-more.js",
-          "autoCompile": true
+          "tasks": {
+            "babel": {
+              "enable": true
+            },
+            "bundle-js": {
+              "enable": true
+            },
+            "minify-js": {
+              "options": {
+                "toplevel": true
+              }
+            }
+          }
         }
       }
     ]
