--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -1322,13 +1322,8 @@
           "autoCompile": true,
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\section-header.js",
           "tasks": {
-            "babel": {
-              "enable": true
-            },
-            "bundle-js": {
-              "enable": true
-            },
             "minify-js": {
+              "enable": false,
               "options": {
                 "toplevel": true
               }
