--- a/scss/prepros.config
+++ b/scss/prepros.config
@@ -1007,6 +1007,17 @@
         }
       },
       {
+        "file": "components/component-drawer-cart.scss",
+        "config": {
+          "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\component-drawer-cart.css",
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "components/component-facets.scss",
         "config": {
           "tasks": {
