fix js cart, css

--- a/scripts/prepros.config
+++ b/scripts/prepros.config
@@ -84,7 +84,8 @@
           "/main-compare.js",
           "/main-collection.js",
           "/main-wishlist.js",
-          "/show-more.js"
+          "/show-more.js",
+          "/cart-drawer.js"
         ],
         "exceptions": []
       }
@@ -986,13 +987,13 @@
           "autoCompile": true,
           "customOutput": "C:\\Portfolio\\Flixvision\\shopify-flixvision\\assets\\cart-drawer.js",
           "tasks": {
-            "babel": {
-              "enable": true
-            },
             "bundle-js": {
-              "enable": true
+              "options": {
+                "devMode": false
+              }
             },
             "minify-js": {
+              "enable": false,
               "options": {
                 "toplevel": true
               }
